--- a/rag/03_Intro_to_RAG.ipynb
+++ b/rag/03_Intro_to_RAG.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Building a RAG application from scratch using `LangChain` and `Bedrock`\n",
     "\n",
-    "Before we get started, I would like to thanks to [Santiago](https://www.youtube.com/@underfitted) for his wonderful tutorial on `LangChain`, this notebook is based on his tutorial. \n",
+    "Before we get started, I would like to thank to [Santiago](https://www.youtube.com/@underfitted) for his wonderful tutorial on `LangChain`, this notebook is based on his tutorial. \n",
     "Here is a high-level overview of the system we want to build:\n",
     "\n",
     "<img src='./images/IMG_0354.jpg' width=\"1200\">"
